--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+h1 {
+  font-weight: bold;
+  font-size: 2em; /* Ajustez la taille selon vos besoins */
+}
 
+h2 {
+  font-weight: bold;
+  font-size: 1.5em; /* Ajustez la taille selon vos besoins */
+}
 @layer base {
   :root {
     --background: 0 0% 100%;
